<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity" >

    <Button
        android:id="@+id/buttonmain"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="442dp"
        android:text="@string/voir_vid_os"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonquit"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="373dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="139dp"
        android:text="@string/quitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonmenu"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="234dp"
        android:text="@string/configuration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonliked"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="342dp"
        android:text="@string/vid_os_aim_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>